--- a/Doc/思考.md
+++ b/Doc/思考.md
@@ -1,3 +1,39 @@
+2015-02-19
+完成任务为主！！！
+完成项目为主！！！
+完成梦想为主！！！
+
+做地摊网貌似不错的选择。别小看了地摊，他可是很实在的。可以让摊主不用在外面摆摊就可以得到订单。不过这订单怎么发货呢？打电话就可以咯。
+不过这会不会很麻烦呢？对于客户来说。当然会，不过一些有人气的商品来说，这不算什么。就先做有名气的商品吧。
+
+呀，个人详情页面该怎么做呢？要包含什么内容？头像，名称，修改资料，我的收藏，个人任务，影响力，我的组合单。
+
+ok 完成商店详情页。
+ok 完成搜索页面。
+完成个人详情页面。
+完成可供顾客浏览的个人详情页。
+完成点评。
+完成举报页面。
+
+
+
+2015-02-18
+完成任务为主！！！
+完成项目为主！！！
+完成梦想为主！！！
+
+其实不需要很完美，但是必须是实用的。能用就行了，现在继续把项目推出来。一个月要完成它。所以一周内必须完成所有的页面。
+既然要完成所有页面，包括JS，那么一天10个页面是必须做得到的。现在不要求那么多，一天5个页面即可。以后慢慢叠加起来。
+真的，不需要太完美，有这些功能就行了，我的设计水平毕竟还是有限的。看看人家的口袋老师就知道了。
+
+完成商店详情页。
+完成搜索页面。
+完成个人详情页面。
+完成可供顾客浏览的个人详情页。
+完成点评。
+完成举报页面。
+
+
 2015-02-07
 完成任务为主！！！
 完成项目为主！！！
@@ -13,6 +49,9 @@ ok 使其能够在手机上访问。
 ok 加上链接。
 
 引入微信CSS。
+    按钮我希望用它的。
+    字体我也希望用它的。
+    
 隐藏微信的头部。
 
 2015-02-06
