--- a/Doc/思考.md
+++ b/Doc/思考.md
@@ -1,3 +1,14 @@
+2015-02-23
+完成任务为主！！！
+完成项目为主！！！
+完成梦想为主！！！
+
+完成个人详情页面吧，用户界面：
+    还是先修改首页的样式先。
+    做我的收藏。
+        加一个nocontent css
+        调整收藏页面的文本。先想清楚怎么做吧。首先是
+
 2015-02-19
 完成任务为主！！！
 完成项目为主！！！
