--- a/Doc/思考.md
+++ b/Doc/思考.md
@@ -1,3 +1,31 @@
+2015-02-29
+完成任务为主！！！
+完成项目为主！！！
+完成梦想为主！！！
+
+ok 加入删除商品的功能。
+ok 现在遇到一个问题，就是感觉淘宝那个框架也不是特别好用。如果每个页面都加载自定义的JS，那么它会执行多次。好了，这个问题解决了。那么接下来要设计妙集这个需求了。
+ok 妙集其实就是商品的组合。可以参考网易云音乐的做法。
+    ok 妙集的列表页。
+    ok 妙集的详细页。
+    ok 妙集的创建页。
+    ok 妙集的删除页。
+ok 粉丝页
+    ok 粉丝首页
+    ok 评论列表
+    ok 粉丝列表
+    ok 收藏记录
+影响页
+    影响首页：分数，提升任务，说明。    任务说明，任务分值，完成次数
+    排行榜：附近，全市，我的排名
+        附近：店铺名称，距离，分数，地址，排名
+        全市：
+
+
+返回可以中心的链接要不要加上去？
+
+
+
 2015-02-28
 完成任务为主！！！
 完成项目为主！！！
