加入首页和商品内容页

--- a/Doc/思考.md
+++ b/Doc/思考.md
@@ -1,3 +1,15 @@
+2015-03-01
+完成任务为主！！！
+完成项目为主！！！
+完成梦想为主！！！
+
+ok 要想清楚如何设计首页
+    首页就放一些公告，热门商品和集单就好了，另外要有搜索框，集单要能够收藏才好。就这样吧。
+    商品该放什么内容呢？商品的名，价格，热门度，图片，来源。
+    集单包括：名称，图片，来源，热门度，包含多少商品。
+做首页
+
+
 2015-02-29
 完成任务为主！！！
 完成项目为主！！！
@@ -15,11 +27,16 @@ ok 粉丝页
     ok 评论列表
     ok 粉丝列表
     ok 收藏记录
-影响页
+ok 影响页
     影响首页：分数，提升任务，说明。    任务说明，任务分值，完成次数
     排行榜：附近，全市，我的排名
         附近：店铺名称，距离，分数，地址，排名
         全市：
+
+顾客端首页
+    怎么做？我觉得还是先做设计，首页该放什么内容。我觉得应该放顾客最感兴趣的东西。前期东西少就不放太多分类了。集单和优惠商品。
+发布页面：
+    分两块，一个是需求，一个是供应。
 
 
 返回可以中心的链接要不要加上去？
