完成静态页面

--- a/Doc/思考.md
+++ b/Doc/思考.md
@@ -1,3 +1,46 @@
+2015-03-06
+完成任务为主！！！
+完成项目为主！！！
+完成梦想为主！！！
+
+商品详情页，布局不是很好，按钮应该在下面，当作是菜单差不多，商铺的内容没有呢，商铺的页面也没有，购买地址没有
+
+妙集这里呢，就是日期没有显示出来，共有几个商品也没显示，封面也没有显示
+
+妙集详情头部有些难看。而且该突出的内容没有突出。
+
+一个高效即时的意见反馈系统。
+
+2015-03-05
+完成任务为主！！！
+完成项目为主！！！
+完成梦想为主！！！
+
+今天已页面为主，明天以细节为主。
+发布页面应该包含什么内容呢？上次已经提高过了，发布页面的内容应该是供和需。而且应该突出需。
+该如何设计呢？分成两个tab吧，一个是发布需求，一个是发布商品。
+发布需求：
+还要满足需求的，没满足的，全部（貌似不需要）。
+发布商品：
+当然就是一些商品列表和集单列表咯。
+
+所以后台要有刷新的按钮，刷新之后，可以排前。
+
+现在来说就是公布详情页了：
+这里包括有
+发布内容，发布时间，发布图片
+发布人信息：名称，头像，
+推荐列表：商品名称，是否是集单，收藏数，想买数，购买地址。
+评论列表：头像，名称，评论内容，评论时间。
+
+排行榜：
+如何提高排名
+最佳商家榜
+最佳妙集
+最佳用户榜
+
+
+
 2015-03-01
 完成任务为主！！！
 完成项目为主！！！
