--- a/Doc/思考.md
+++ b/Doc/思考.md
@@ -2,7 +2,11 @@
 完成任务为主！！！
 完成项目为主！！！
 完成梦想为主！！！
-先提交一下代码。
+ok 先提交一下代码。
+做好一个用户体系。
+    ok 先新建数据库
+    搞wechat
+    给自己半个小时，如果还是不行，那么就用常规的办法了。
 
 
 
