--- a/Doc/思考.md
+++ b/Doc/思考.md
@@ -5,8 +5,10 @@
 ok 先提交一下代码。
 做好一个用户体系。
     ok 先新建数据库
-    搞wechat
-    给自己半个小时，如果还是不行，那么就用常规的办法了。
+    ok 搞wechat
+    ok 给自己半个小时，如果还是不行，那么就用常规的办法了。
+    ok 建立角色体系
+    ok 建立model自动验证和自动填充
 
 
 
