--- a/Doc/思考.md
+++ b/Doc/思考.md
@@ -1,3 +1,16 @@
+2015-03-14
+完成任务为主！！！
+完成项目为主！！！
+完成梦想为主！！！
+
+商品管理：
+    ok 评论和收藏
+    ok 样式问题 原来是需要换成DIV才可以，操微信浏览器
+    ok 做修改
+    ok 做删除
+    跳转的问题要解决，返回就应该回到原始位置。
+
+
 2015-03-07
 完成任务为主！！！
 完成项目为主！！！
