--- a/Doc/思考.md
+++ b/Doc/思考.md
@@ -1,3 +1,20 @@
+2015-03-16
+完成任务为主！！！
+完成项目为主！！！
+完成梦想为主！！！
+优化JS
+    init和handler的区别
+做上传图片的逻辑。
+
+
+2015-03-15
+完成任务为主！！！
+完成项目为主！！！
+完成梦想为主！！！
+
+ok 解决缓存的问题
+优化商品编辑的代码
+
 2015-03-14
 完成任务为主！！！
 完成项目为主！！！
@@ -8,7 +25,7 @@
     ok 样式问题 原来是需要换成DIV才可以，操微信浏览器
     ok 做修改
     ok 做删除
-    跳转的问题要解决，返回就应该回到原始位置。
+    ok 跳转的问题要解决，返回就应该回到原始位置。(通过不是很好的办法)
 
 
 2015-03-07
