后台的一些开发

--- a/Doc/思考.md
+++ b/Doc/思考.md
@@ -2,9 +2,12 @@
 完成任务为主！！！
 完成项目为主！！！
 完成梦想为主！！！
-优化JS
+ok 优化JS
     init和handler的区别
-做上传图片的逻辑。
+ok 做上传图片的逻辑。
+ok 将后台需要上传的地方都改好。
+ok 将集合里的商品罗列出来
+做我的消息
 
 
 2015-03-15
