--- a/Doc/思考.md
+++ b/Doc/思考.md
@@ -1,3 +1,19 @@
+2015-03-17
+完成任务为主！！！
+完成项目为主！！！
+完成梦想为主！！！
+
+ok 提供图片删除功能
+    需求：点击图片，提示是否要删除，点击删除后，删除媒体与实体的关联。
+    设计：在JS上加上click事件，确认删除后，在后端编写删除实体的代码。
+ok 关注消费者端
+ok 前端的菜单栏
+    需求：点击菜单的时候，要平滑切换，而不是刷新整个页面。而且切换完成之后，菜单栏的焦点要发生改变。
+首页热门商品，人气妙集
+    需求：罗列热门商品，和人气妙集。热门商品就是浏览量，想买人数，评论数，收藏数的综合评价
+
+
+
 2015-03-16
 完成任务为主！！！
 完成项目为主！！！
@@ -7,7 +23,7 @@ ok 优化JS
 ok 做上传图片的逻辑。
 ok 将后台需要上传的地方都改好。
 ok 将集合里的商品罗列出来
-做我的消息
+ok 做我的消息
 
 
 2015-03-15
