--- a/Doc/思考.md
+++ b/Doc/思考.md
@@ -1,3 +1,14 @@
+2015-03-21
+完成任务为主！！！
+完成项目为主！！！
+完成梦想为主！！！
+
+回忆一下做这个APP的意义是什么
+将最新宝贝分离出来。
+先整理好首页吧。
+
+名称，地址，图片，距离，消费
+
 2015-03-20
 完成任务为主！！！
 完成项目为主！！！
