--- a/Doc/思考.md
+++ b/Doc/思考.md
@@ -1,3 +1,22 @@
+2015-03-23
+完成任务为主！！！
+完成项目为主！！！
+完成梦想为主！！！
+
+doing 部署服务器。
+看看是否能顺利接入微信
+
+
+2015-03-22
+完成任务为主！！！
+完成项目为主！！！
+完成梦想为主！！！
+
+OK 先把那个详情页面做好吧。
+现在就要做业务逻辑咯。就简单使用PHP即可。另外，还需要数据库建模，现在有个问题是，图片该怎么保存。现在已经有了一个media表了，我有必要再弄一个吗？我觉得显然没有必要的了。代码还暂时不可以删掉，因为旧代码还是需要用的。而且这次的新项目也可以暂时不分那么多层，毕竟这只是一个小小项目而已。
+喜欢的逻辑
+
+
 2015-03-21
 完成任务为主！！！
 完成项目为主！！！
